front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: backup-testing-sample-flask-app
  labels:
    app: backup-testing-sample-flask
    component: front
    kind: Deployment
    version: 0.1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backup-testing-sample-flask
      component: front
  template:
    metadata:
      labels:
        app: backup-testing-sample-flask
        component: front
        kind: Template
    spec:
      containers:
      - name: sample-flask-app-client
        image: astenmco/sample-flask-app_client:0.1.0
        ports:
          - containerPort: 8080
