back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
  namespace: backup-testing-sample-flask-app
  labels:
    app: backup-testing-sample-flask
    component: back
    kind: service
    version: 0.1.0
spec:
  selector:
    app: backup-testing-sample-flask
    component: back
  type: NodePort
  ports:
    - name: rest
      protocol: TCP
      port: 5000
      targetPort: 5000
