front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: backup-testing-sample-flask-app
  labels:
    app: backup-testing-sample-flask
    component: front
    kind: service
    version: 0.1.0
spec:
  selector:
    app: backup-testing-sample-flask
    component: front
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
