back-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: back
  namespace: backup-testing-sample-flask-app
  labels:
    app: backup-testing-sample-flask
    component: back
    kind: route
    version: 0.1.0
spec:
  path: /
  to:
    kind: Service
    name: back
  port:
    targetPort: 5000
